[package]
name = "prs-utility-rust"
version = "0.1.0"
authors = ["huoju <virushuo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.15.5", features = [ "recovery"]}
hex = "0.3.2"
rust-crypto = "0.2.36"
